# 2023_1_Mad_Pointer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
engine/: CMakeLists.txt
engine/camera/: camera.h  table_top_camera.h
engine/controller/: AI_controller.h  controller_base.h  player_controller.h
engine/core/: CMakeLists.txt
engine/core/include/ecs/: api.h
engine/core/include/ecs/component/: base_component.h  component.h
engine/core/include/ecs/component_manager/: component_manager.h
engine/core/include/ecs/entity/: entity.h  entity_base.h
engine/core/include/ecs/entity_manager/: entity_manager.h
engine/core/include/ecs/system/: system.h  system_base.h
engine/core/include/ecs/system_manager/: system_manager.h
engine/core/include/engine/: engine.h
engine/core/include/event/: event.h  event_base.h  event_delegate.h  event_dispatcher.h  event_handler.h  event_listener.h
engine/core/include/utils/: family_type_id.h  file_sink.h  logger.h  timer.h
engine/core/src/ecs/component/: component_base.cpp
engine/core/src/ecs/component_manager/: component_manager.cpp
engine/core/src/ecs/entity/: entity_base.cpp
engine/core/src/ecs/entity_manager/: entity_manager.cpp
engine/core/src/ecs/system/: system_base.cpp
engine/core/src/ecs/system_registry/: system_registry.cpp
engine/core/src/engine/: engine.cpp
engine/core/src/event/: event_handler.cpp
engine/core/src/utils/: family_type_id.cpp  logger.cpp  timer.cpp
engine/ecs/component/: base_component.h  component.h
engine/ecs/entitty/: entity.h
engine/ecs/system/collision/: collision_cheker.h  collision_solver.h
engine/game_components/: collision_component.h  respawn_component.h  shape_component.h  transform.h
engine/game_components/include/: collision_component.h  radius_component.h  shape_component.h  transform_component.h
engine/game_events/: game_event.h
engine/game_loop/: game_loop.h
engine/game_loop/include/: game_loop.h
engine/game_loop/src/: game_loop.cpp
engine/game_objects/box/include/: box.h
engine/game_objects/car/include/: car.h
engine/game_objects/enemy/include/: enemy.h
engine/game_objects/game_object/include/: game_object.h
engine/game_objects/player/include/: player.h
engine/game_objects/projectile/include/: projectile.h
engine/game_objects/wall/include/: wall.h
engine/game_objects_spawn/: point_spawn.h
engine/game_systems/: collision_system.h  controller_system.h  input_system.h  lifetime_sytem.h  spawn_system.h  world_system.h
engine/game_systems/include/: car_controller.h  car_spawn_system.h  collision_system.h  controller.h  enemy_controller_system.h  input_system.h  lifetime_system.h  rectangle_collision_system.h  render_system.h  score_system.h  shoot_system.h  spawn_system.h  transform_system.h  world_system.h
engine/game_systems/src/: render_system.cpp
engine/include/camera/: camera.h  game_camera.h  orthogonal_camera.h  table_top_camera.h
engine/include/controller/: AI_controller.h  controller.h  controller_base.h  player_controller.h
engine/include/ecs/: api.h
engine/include/ecs/component/: base_component.h  component.h
engine/include/ecs/component_manager/: component_manager.h
engine/include/ecs/entitty/: entity.h  entity_base.h
engine/include/ecs/entity/: entity.h  entity_base.h
engine/include/ecs/entity_manager/: entity_manager.h
engine/include/ecs/system/: system.h  system_base.h
engine/include/ecs/system/damage/: damage.h
engine/include/ecs/system/kill/: kill_loot.h
engine/include/ecs/system/physics/: raycast.h
engine/include/ecs/system/transform/: transform.h
engine/include/ecs/system_manager/: system_manager.h
engine/include/engine/: engine.h
engine/include/event/: event.h  event_base.h  event_base_dispatcher.h  event_delegate.h  event_dispatcher.h  event_handler.h  event_listener.h
engine/include/game_components/: collision_component.h  respawn_component.h  rigidbody_component.h  shape_component.h  spawn_component.h  transform.h  transform_component.h
engine/include/game_events/: game_events.h
engine/include/game_loop/: game_loop.h
engine/include/game_objects_spawn/: point_spawn.h  spawn.h  spawn_base.h
engine/include/game_systems/: controller_system.h  input_system.h  lifetime_system.h  physics_system.h  world_system.h
engine/include/memory/: chunk_allocator.h  memory_manager.h
engine/include/memory/allocator/: allocator_base.h  linear_allocator.h  pool_allocator.h  stack_allocator.h
engine/include/network/serialization/: deserialize.h  serializator.h
engine/include/network/tcp_socket/: network_component.h
engine/include/scene/: scene.h
engine/include/shape_common/: shape_buffer_index.h
engine/include/utils/: family_type_id.h  handle.h  timer.h
engine/shape_common/: shape.h  shape_buffer_index.h
engine/src/ecs/: CMakeLists.txt
engine/src/ecs/component/: component_base.cpp
engine/src/ecs/component_manager/: component_manager.cpp
engine/src/ecs/entity/: entity_base.cpp
engine/src/ecs/entity_manager/: entity_manager.cpp
engine/src/ecs/system/: system_base.cpp
engine/src/ecs/system_registry/: system_registry.cpp
engine/src/engine/: engine.cpp
engine/src/game_loop/: game_loop.cpp
engine/src/game_systems/: input_system.cpp
engine/src/utils/: family_type_id.cpp  timer.cpp
game/: CMakeLists.txt  main.cpp
game/cars_game/include/: cars_game.h
game/client/: main.cpp
game/client/include/: client_game.h  game.h
game/include/game_event/: game_event.h
game/include/game_types/: game_types.h
game/include/input_system/: input_system.h
game/menu/include/: menu.h
game/shooter_game/include/: shooter_game.h
lib/math/: CMakeLists.txt
lib/math/include/: vector2.h
lib/math/src/: vector2.cpp
lib/network/tcp_socket/: reflection.h
tests/: CMakeLists.txt
tests/engine/utils/: test_timer.cpp
tests/lib/: test_math.cpp
